[gd_scene load_steps=24 format=3 uid="uid://b4o6iac81lirq"]

[ext_resource type="Script" path="res://scenes/world-new/lab-02/Bridge.gd" id="1_5s20f"]
[ext_resource type="AudioStream" uid="uid://cmblol3d5mrtv" path="res://assets/music/lab_past.ogg" id="2_sjxuf"]
[ext_resource type="Texture2D" uid="uid://cy7vms5nctphh" path="res://assets/sprites/bg/lab-02/Day/Bridge_Day.png" id="2_wv0cw"]
[ext_resource type="AudioStream" uid="uid://b244747mcilks" path="res://assets/music/lab_present.ogg" id="3_ivvde"]
[ext_resource type="Texture2D" uid="uid://ewhyk45ihijq" path="res://assets/sprites/bg/lab-02/Day/S Houses.png" id="3_xo1d5"]
[ext_resource type="Texture2D" uid="uid://cgfk0u617fy1k" path="res://assets/sprites/bg/lab-02/Day/S Lanterns.png" id="4_6k14p"]
[ext_resource type="Texture2D" uid="uid://c5gtu7gdq7jwg" path="res://assets/sprites/bg/lab-02/Day/Waterfall/waterfall-spritesheet.png" id="5_msau8"]
[ext_resource type="Texture2D" uid="uid://cabslp7026aw5" path="res://assets/sprites/bg/lab-02/Night/Bridge_Night.png" id="6_m66sd"]
[ext_resource type="Texture2D" uid="uid://c7a7btx02yp1r" path="res://assets/sprites/bg/lab-02/Night/house.png" id="7_xyvhv"]
[ext_resource type="Texture2D" uid="uid://bdgim8nd7f7mj" path="res://assets/sprites/bg/lab-02/Night/Waterfall/waterfall-spritesheet-night.png" id="8_cnlvg"]
[ext_resource type="PackedScene" uid="uid://c0bdaa1uhiriw" path="res://scenes/tools/SpawnPoint.tscn" id="9_jr8hp"]
[ext_resource type="PackedScene" uid="uid://ph71i2cgc78p" path="res://scenes/props/flowers-future/Flower1.tscn" id="9_rk4ga"]
[ext_resource type="PackedScene" uid="uid://dmllerypcllhe" path="res://scenes/tools/SceneTransition.tscn" id="10_1il8k"]
[ext_resource type="PackedScene" uid="uid://c3oggqxbkn0u0" path="res://scenes/props/star-fragment/StarFragment.tscn" id="11_ha2fo"]
[ext_resource type="PackedScene" uid="uid://cxaosoghto51p" path="res://scenes/props/flowers-future/Flower2.tscn" id="12_ky8j0"]

[sub_resource type="Animation" id="Animation_ic48h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Past/Waterfall-spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7je2m"]
resource_name = "waterfall"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Past/Waterfall-spritesheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wso8j"]
_data = {
"RESET": SubResource("Animation_ic48h"),
"waterfall": SubResource("Animation_7je2m")
}

[sub_resource type="Animation" id="Animation_h1g12"]
resource_name = "waterfall"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Waterfall-spritesheet-night:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0o3og"]
_data = {
"waterfall": SubResource("Animation_h1g12")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4r5a"]
size = Vector2(20, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57atc"]
size = Vector2(20, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1htqs"]
size = Vector2(20, 60)

[node name="Bridge" type="Node2D" node_paths=PackedStringArray("past_nodes", "future_nodes")]
script = ExtResource("1_5s20f")
past_nodes = NodePath("Past")
past_color = Color(1, 1, 1, 1)
past_music = ExtResource("2_sjxuf")
future_nodes = NodePath("Future")
future_music = ExtResource("3_ivvde")

[node name="Past" type="Node2D" parent="."]

[node name="BridgeDay" type="Sprite2D" parent="Past"]
position = Vector2(49, -34)
texture = ExtResource("2_wv0cw")

[node name="SHouses" type="Sprite2D" parent="Past"]
z_index = 2
position = Vector2(49, -34)
texture = ExtResource("3_xo1d5")

[node name="SLanterns" type="Sprite2D" parent="Past"]
z_index = 2
position = Vector2(49, -34)
texture = ExtResource("4_6k14p")

[node name="Waterfall-spritesheet" type="Sprite2D" parent="Past"]
z_index = -1
position = Vector2(49, -34)
texture = ExtResource("5_msau8")
vframes = 4

[node name="Walls" type="StaticBody2D" parent="Past"]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Past/Walls"]
polygon = PackedVector2Array(-111, -114, -41, -114, -41, -97, 13, -97, 13, -114, 54, -114, 53, -89, 52, -66, 52, -56, 158, -56, 169, -60, 169, -114, 209, -114, 209, -55, 234, -55, 233, -154, -147, -154, -146, -54, -111, -54)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Past/Walls"]
polygon = PackedVector2Array(-146, -34, -111, -34, -111, 26, 42, 26, 37, -28, 37, -35, 51, -39, 159, -39, 171, -35, 171, -28, 169, 46, 209, 46, 209, -35, 233, -36, 230, 69, -143, 69)

[node name="AnimationPlayerPast" type="AnimationPlayer" parent="Past"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_wso8j")
}
autoplay = "waterfall"
speed_scale = 0.6

[node name="Future" type="Node2D" parent="."]

[node name="BridgeNight" type="Sprite2D" parent="Future"]
position = Vector2(49, -34)
texture = ExtResource("6_m66sd")

[node name="House" type="Sprite2D" parent="Future"]
z_index = 2
position = Vector2(-16.5, 23.5)
texture = ExtResource("7_xyvhv")

[node name="Waterfall-spritesheet-night" type="Sprite2D" parent="Future"]
z_index = -2
position = Vector2(49, -34)
texture = ExtResource("8_cnlvg")
vframes = 4

[node name="AnimationPlayerFuture" type="AnimationPlayer" parent="Future"]
libraries = {
"": SubResource("AnimationLibrary_0o3og")
}
autoplay = "waterfall"
speed_scale = 0.6

[node name="StaticBody2D" type="StaticBody2D" parent="Future"]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Future/StaticBody2D"]
polygon = PackedVector2Array(49, -114, 50, -56, 72, -56, 71, -39, 47, -38, 47, 1, 32, 25, -111, 26, -111, -34, -138, -34, -134, 53, 101, 54, 94, -132, -139, -134, -140, -55, -111, -54, -111, -114)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Future/StaticBody2D"]
polygon = PackedVector2Array(106, -128, 111, 55, 244, 58, 243, -37, 209, -35, 210, 46, 194, 46, 166, -5, 166, -39, 142, -39, 142, -56, 165, -56, 167, -86, 153, -114, 209, -114, 209, -54, 248, -66, 244, -144)

[node name="Flower1" parent="Future" instance=ExtResource("9_rk4ga")]
position = Vector2(-67, -10)

[node name="Flower2" parent="Future" instance=ExtResource("12_ky8j0")]
position = Vector2(26, -25)

[node name="Flower3" parent="Future" instance=ExtResource("9_rk4ga")]
position = Vector2(-14, -101)

[node name="Flower4" parent="Future" instance=ExtResource("12_ky8j0")]
position = Vector2(184, -112)

[node name="Flower5" parent="Future" instance=ExtResource("9_rk4ga")]
position = Vector2(197, 17)

[node name="StarFragment" parent="Future" instance=ExtResource("11_ha2fo")]
position = Vector2(184, -17)

[node name="NoticeStarShard" type="Area2D" parent="Future"]
collision_layer = 0
collision_mask = 3
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Future/NoticeStarShard"]
position = Vector2(-2, -41)
shape = SubResource("RectangleShape2D_h4r5a")

[node name="SpawnPoint" parent="." instance=ExtResource("9_jr8hp")]
position = Vector2(-97, -52)

[node name="SpawnPoint2" parent="." instance=ExtResource("9_jr8hp")]
position = Vector2(192, -50)
id = 1

[node name="SceneTransitionLeft" parent="." instance=ExtResource("10_1il8k")]
position = Vector2(-115, -51)
destination_level = "res://scenes/world-new/lab-01/LabExterior.tscn"
spawn_id = 1

[node name="CollisionShape2D" parent="SceneTransitionLeft" index="0"]
shape = SubResource("RectangleShape2D_57atc")

[node name="SceneTransitionRight" parent="." instance=ExtResource("10_1il8k")]
position = Vector2(214, -50)
destination_level = "res://scenes/world-new/lab-03/Town1.tscn"
spawn_id = 6

[node name="CollisionShape2D" parent="SceneTransitionRight" index="0"]
shape = SubResource("RectangleShape2D_1htqs")

[node name="WaterfallAudio" type="Marker2D" parent="."]
position = Vector2(107, -8)

[connection signal="body_entered" from="Future/NoticeStarShard" to="." method="_on_notice_star_shard_body_entered"]

[editable path="SceneTransitionLeft"]
[editable path="SceneTransitionRight"]
